rubocop/examples/good/style_EmptyLinesAroundModuleBody.rb
# Checks if empty lines around the bodies of modules match the configuration.

# good
module Test
  def something
     ...
  end
end
