rubocop/examples/bad/style_EmptyLinesAroundModuleBody.rb
# Checks if empty lines around the bodies of modules match the configuration.

# bad
module Test

  def something
     ...
  end

end
